Fixing conflict of "overflow: hidden" / "position: relative" Positioning added for view switcher, which breaks autocomplete suggestions (hidden with overflow). Removed and adjusted position of switch.

--- a/media/css/base.less
+++ b/media/css/base.less
@@ -1144,7 +1144,6 @@ ul.tri-set img {
 	background: #FFF;
 	background: rgba(255,255,255,0.5);
 	overflow: hidden;
-	position: relative;
 }
 
 #content .search-results form {
@@ -1241,7 +1240,7 @@ ul.tri-set img {
 .search-results .switch {
 	position: absolute;
 	top: 1em;
-	left: 35px;
+	left: 50px;
 	font-size: 0.785em;
 }
 
